# practicalProject

./: .gitignore  CMakeLists.txt  README.md  main.cpp  source  source.csv
Actions/: Actions.cpp  Actions.h
CliInterface/: Cli.cpp  Cli.h
Data/Plant/: PlantData.cpp  PlantData.h
DynamicArray/: DynamicArray.cpp  DynamicArray.h
DynamicVector/: DynamicVector.h
Employee/: Employee.cpp  Employee.h
Helpers/: Helpers.cpp  Helpers.h
Models/: ContentModel.h
Models/PlantModel/: PlantModel.cpp  PlantModel.h
employeeCLI/: EmployeeCli.cpp  EmployeeCli.h
fileStream/: FileStream.cpp  FileStream.h
fileSystem/: fileSystem.cpp  fileSystem.h
fileSystem/InterfaceCli/: FileSystemCli.h
search/: search.cpp  search.h
